---------------------------------------------------------------------------------------------------
Version: 4.0.5
Date: ????
  Bugfixes:
    - Fixed error when resetting rail types
---------------------------------------------------------------------------------------------------
Version: 4.0.4
Date: 2020-08-28
  Bugfixes:
    - Fixed curved rails being sleepy rails with Naked Rails mod active
    - Fixed error when removing Naked Rails mod
    - Fixed blueprints created from the settings UI not working
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: 2020-08-24
  Bugfixes:
    - Fixed FARL clearing/landfilling huge areas unless "Gridsize/Absolute reference point" is checked in the blueprints.
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 05. 07. 2020
  Bugfixes:
    - Fixed error when placing landfill
---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 08. 02. 2020
  Bugfixes:
    - Fixed startup warnings
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 26. 01. 2020
  Changes:
    - Updated for Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 3.1.16
Date: 26. 01. 2020
  Changes:
    - Minor performance increase (filtered events)
---------------------------------------------------------------------------------------------------
Version: 3.1.15
Date: 09. 10. 2019
  Bugfixes:
    - Fixed error when a pole couldn't be placed
---------------------------------------------------------------------------------------------------
Version: 3.1.14
Date: 15. 09. 2019
  Bugfixes:
    - Fixed circular dependency with IndustrialRevolution and Multiple Unit Train Control